Fix buttons spacing on addtocartmodal

--- a/src/styles/custom.less
+++ b/src/styles/custom.less
@@ -8,3 +8,15 @@
 @import 'search-items.less';
 @import 'employee-giving.less';
 @import 'btnCustom.less';
+
+#addToCartModal .modal-body button:not(:last-child){
+  @media (min-width: 992px) {
+    margin-right: 30px;
+  }
+}
+#addToCartModal .modal-body button {
+  @media (min-width: 992px) {
+    width: 80px;
+  }
+
+}
